Fix styling for text and headings to make text more readable

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -54,6 +54,12 @@ h1, h2, h3, h4, h5 {
     font-size: 1.9rem;
     color: #ffffff;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    margin-top: 40px;
+    
+}
+
+#hero p {
+    font-size: 0.9rem;
     
 }
 
@@ -63,7 +69,10 @@ section {
     background-color: var(--background-color);
 }
 
-
+#welcome p {
+    font-size: 0.8rem;
+    text-align: start;
+}
 
 .info-title {
     margin-top: 15px
@@ -117,12 +126,20 @@ section {
         font-size: 2.5rem;
     }
 
+    #hero p {
+        font-size: 1.2rem;
+    }
+
     .info {
         font-size: 1.2rem;
     }
 
     #welcome {
         font-size: 1.2rem;
+    }
+
+    #welcome p {
+        font-size: 1rem;
     }
     
 }
